<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_dialog_background">

    <ImageButton
        android:id="@+id/dialogClose"
        style="@style/CloseButton"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/DialogTitle"
        android:id="@+id/connectionDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add meal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogClose"/>

    <LinearLayout
        android:id="@+id/manualAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_dialog_item_background"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/connectionDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/DialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/add_meal" />

        <TextView
            style="@style/DialogSubMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/fill_meal_manually" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/brast_fedding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_dialog_item_background"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/manualAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/DialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/start_breast_feeding" />

        <TextView
            style="@style/DialogSubMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:text="@string/start_feeding_timer" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>